--- a/Code/SFU Circular/app/src/main/res/values/strings.xml
+++ b/Code/SFU Circular/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">SFU Circular</string>
     <string name="Request_Item">RequestItem</string>
 </resources>
