--- a/Code/SFU Circular/app/src/main/res/values/strings.xml
+++ b/Code/SFU Circular/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">SFU Circular</string>
     <string name="Request_Item">RequestItem</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
